fix dependencies